--- a/gui/qt2.ui
+++ b/gui/qt2.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>508</width>
-    <height>302</height>
+    <width>523</width>
+    <height>423</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -43,7 +43,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>60</y>
+     <y>210</y>
      <width>481</width>
      <height>131</height>
     </rect>
@@ -76,7 +76,7 @@
    <property name="geometry">
     <rect>
      <x>9</x>
-     <y>210</y>
+     <y>360</y>
      <width>239</width>
      <height>31</height>
     </rect>
@@ -97,9 +97,9 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="button_">
+     <widget class="QPushButton" name="button_multiple">
       <property name="text">
-       <string>...</string>
+       <string>abcd</string>
       </property>
      </widget>
     </item>
@@ -109,7 +109,7 @@
    <property name="geometry">
     <rect>
      <x>269</x>
-     <y>210</y>
+     <y>360</y>
      <width>221</width>
      <height>31</height>
     </rect>
@@ -134,7 +134,7 @@
    <property name="geometry">
     <rect>
      <x>330</x>
-     <y>40</y>
+     <y>190</y>
      <width>131</width>
      <height>21</height>
     </rect>
@@ -152,7 +152,7 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>40</y>
+     <y>190</y>
      <width>91</width>
      <height>21</height>
     </rect>
@@ -170,13 +170,98 @@
    <property name="geometry">
     <rect>
      <x>90</x>
-     <y>190</y>
+     <y>340</y>
      <width>81</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>you can add...</string>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="text_app_id">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>50</y>
+     <width>261</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="text_app_key">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>90</y>
+     <width>261</width>
+     <height>31</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_app_id">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>60</y>
+     <width>47</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>app id:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_app_key">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>100</y>
+     <width>47</width>
+     <height>13</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>app key:</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>30</y>
+     <width>531</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="Line" name="line_2">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>160</y>
+     <width>531</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="button_api">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>130</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>add data</string>
    </property>
   </widget>
  </widget>
